Kuberantes-Manifest/devops-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-8080-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-deploy
  template:
    metadata:
      labels:
        app: devops-deploy
    spec:
      containers:
      - name: devops-container
        image: nykiee/devops:beta
        ports:
        - containerPort: 8080
      startupProbe:
          httpGet:
            path: /health
            port: 8080
          failureThreshold: 10
          periodSeconds: 10
          initialDelaySeconds: 15
        # 2. Liveness Probe: Checks if the app is still running correctly
      livenessProbe:
          httpGet:
            path: /health
            port: 8080
          periodSeconds: 10
          failureThreshold: 3
          timeoutSeconds: 2
          initialDelaySeconds: 5
