Kuberantes-Manifest/devops-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-svc
  namespace: default
spec:
  selector:
    app: devops-deploy
  ports:
    - protocol: TCP
      port: 80          # The port the Service listens on
      targetPort: 8080  # The port your container is listening on
  type: ClusterIP
